ingress/path-based/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  #type: LoadBalancer
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
